# personal-finance

./: $null  .env.example  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  DESKTOP-BUILD.md  GOOGLE-DRIVE-SYNC-GUIDE.md  ICONS.md  MOBILE-OPTIMIZATION.md  QUICK-START-SYNC.md  README.md  SYNC-USER-GUIDE.md  create-icon.js  index.html  package-lock.json  package.json  plan-context.md  plan-progress.md  plan.md  tailwind.config.js  vite.config.ts
.claude/: settings.local.json
assets/: BudgetPage-DedBKUPv.js  ConfirmModal-D_6NAvxK.js  DashboardPage-DlBjs04G.js  LineChart-CIGnwfOl.js  MetricCard-ihLxaQMX.js  MonthTab-Ckz7-1d_.js  OverviewTab-GUt9n431.js  PageContainer-Dpv9AWI-.js  PeriodSelector-Ccy8X63q.js  SetupPage-CNg2D88M.js  TransactionsPage-wX8oEBMO.js  TrendsTab-HMrYMlX_.js  YearTab-Bya-4CpF.js  format-zwvYc4J-.js  formatting-AU7roy_L.js  index-CVI7sXRv.css  index-DjoC8Tjb.js  initializeDefaults-CAB3Ggaj.js  propagateRecurrentBudgets-CPwkEmGB.js  tauri-plugin-dialog-D0k7y0nc.js  tauri-plugin-fs-DQLyAS96.js  useBudgetCalculations-CF5Bm1af.js  useMediaQuery-BhwLU3FH.js
docs/: CHANGELOG.md  DEPLOYMENT.md  SYNC-FIXES.md  product-context.md  technical-context.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: main.rs
src/constants/: budgetModes.ts  calculations.ts  designSystem.ts  formatting.ts  paymentMethods.ts  storage.ts  transactionModes.ts  viewModes.ts
src/context/: AppContext.tsx
src/db/: index.ts
src/hooks/: useAlerts.ts  useBackup.ts  useBudgetCalculations.ts  (+7 more)
(+89 files in other folders)
